# build-interpreter-lessons

./: pyproject.toml
interpreter/: __init__.py
interpreter/ex1/: interpreter.py  token.py  token_type.py
interpreter/ex10/: ast.py  grammar.txt  lexer.py  parser.py
interpreter/ex11/: __init__.py  interpreter.py  symbols.py  token_type.py
interpreter/ex12/: ast.py  grammar.txt  parser.py  symbols.py
interpreter/ex13/: __init__.py  ast.py  interpreter.py  lexer.py  parser.py  symbols.py  token_type.py
interpreter/ex14/: ast.py  parser.py  symbols.py
interpreter/ex15/: error.py  grammar.txt  interpreter.py  parser.py  symbols.py  token.py
interpreter/ex16/: __init__.py  interpreter.py
interpreter/ex17/: ast.py  error.py  grammar.txt  interpreter.py  ln_translator.py  memory.py  parser.py  symbols.py  visitor.py
interpreter/ex18/: interpreter.py  main.py  rpn_translator.py  symbols.py
interpreter/ex19/: __init__.py  ast.py  interpreter.py  lexer.py  main.py  memory.py  symbols.py  token_type.py
interpreter/ex2/: interpreter.py
interpreter/ex3/: interpreter.py  token_type.py
interpreter/ex4/: interpreter.py  lexer.py
interpreter/ex5/: interpreter.py  lexer.py  token_type.py
interpreter/ex6/: interpreter.py  token_type.py
interpreter/ex7/: ast.py  interpreter.py  parser.py
interpreter/ex8/: __init__.py  ast.py  interpreter.py  lexer.py  parser.py
interpreter/ex9/: ast.py  interpreter.py  keywords.py  lexer.py  (+3 more)
tests/: __init__.py  integration_tests.py  lexer_tests.py  ln_translator.py  ln_translator_tests.py  rpn_translator_tests.py
