[tool.poetry]
name = "interpreter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
interpreter = "interpreter:main"
tests = "tests:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
